name:                quiver-binary
version:             0.1.0.0
synopsis:            Binary serialisation support for Quivers
description:         Handling for the binary library within Quivers
license:             MIT
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
-- copyright:
category:            Control
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Control.Quiver.Binary
  -- other-modules:
  build-depends:       base >=4.8 && <4.9
                     , binary == 0.8.*
                     , bytestring
                     , quiver == 1.1.*
                     , quiver-bytestring
                     , transformers == 0.5.*
  hs-source-dirs:      src
  default-language:    Haskell2010
